--- a/info/apdl-config.org
+++ b/info/apdl-config.org
@@ -1,4 +1,5 @@
-#+DATE: Time-stamp: <2020-05-01>
+
+#+DATE: Time-stamp: <2021-08-30>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:{} arch:headline
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
@@ -23,7 +24,12 @@
 #+INFOJS_OPT:
 #+LATEX_HEADER:
 # #+TITLE: Configuration and Customisation of APDL-Mode
-#+text: Copyright (C) 2016 - 2020, H. Dieter Wilhelm, GPL V3
+#+text: Copyright (C) 2016 - 2021, H. Dieter Wilhelm, GPL V3
+
+#+cindex: Configuration
+#+cindex: Configure APDL-Mode
+#+cindex: Customisation
+#+cindex: Customise APDL-Mode
 
 Most functionality of APDL-Mode is working without additional
 configurations.  APDL-Mode is intelligent enough to figure out Ansys
@@ -38,6 +44,7 @@ Emacs customistation system
 #+texinfo: @inforef{Easy Customization,,emacs}
 or 2. by directly manipulating the Emacs configuration file
 #+texinfo: @inforef{Init File,,emacs}.
+
 
   1. For an overview of available APDL-Mode customisations variables
      it’s easiest to open the APDL-Mode’s customisation buffer either
@@ -59,7 +66,7 @@ or 2. by directly manipulating the Emacs configuration file
      is ~;~ (one semi-colon `;').
 
 * Conventions
-  used in /apdl-config.el/
+  used in /apdl-config.el/, APDL-Mode's example configuration file.
   Textual hints in /apdl-config.el/ are indicated with TWO semi-colons
   ~;;~, please uncomment only the code lines with a SINGLE comment sign
   and change them when appropriate.
@@ -72,7 +79,7 @@ or 2. by directly manipulating the Emacs configuration file
     ;;; apdl-config.el --- Customisation example for APDL-Mode
     ;; This file was built from the file "apdl-config.org".
 
-    ;; Copyright (C) 2016 - 2020 H. Dieter Wilhelm, GPL V3
+    ;; Copyright (C) 2016 - 2021 H. Dieter Wilhelm, GPL V3
     ;; Author: H. Dieter Wilhelm <dieter@duenenhof-wilhelm.de>
     ;; Version: 20.6.0
     ;; Package-Requires: ((emacs "25.1"))
@@ -121,31 +128,31 @@ or 2. by directly manipulating the Emacs configuration file
   #+END_SRC
 
 * Important Prerequisite
-  For using Ansys processes, like getting license informations,
-  the Ansys Installation path with version information is necessary.
-  If you have a non default installation APDL-Mode might not be able
-  to find your Ansys installation.  Please configure your installation
-  path up to and including the Ansys versioning number.
+  For using Ansys processes, like getting license informations, the
+  Ansys Installation path with version information is necessary.
+  APDL-Mode is looking in different places and is using environment
+  variables to detect your Asys installation but if you have a non
+  default installation it might not be able to find it.  In that case
+  please configure your installation path up to and including the
+  Ansys versioning number.
 
   You can change the installation path for the current session with
   the MAPDL menu entry "Change Installation Directory".
 
    #+BEGIN_SRC emacs-lisp  :tangle yes
   (cond ((string= window-system "x")
-	  ;; This is an example of an installation directory on GNU-Linux
+	  ;; This condition is an example of an installation directory on GNU-Linux
 	  (setq apdl-ansys-install-directory "/appl/ansys_inc/v201/"))
 	  ;; the default might look like "/ansys_inc/v201/"
-	 (t ;This an example of an installation directory on WINDOWS
-	  ;; Emacs is using here forward slashes as under Unix and not
-	  ;; the backslash "\"!
+	 (t ;; The default condition is an example of an installation directory on WINDOWS
+	  ;; Emacs is using here forward slashes as under Unix and not the backslash "\"!
 	  (setq apdl-ansys-install-directory "D:/Ansys Inc/v201/")))
 	  ;; default: "C:/Program Files/Ansys Inc/v201/"
    #+END_SRC
 
    If your Ansys installation differs completely from the standard
-   Ansys directory structure, or you want to use multiple versions of
-   Ansys, then please consult the section [[*Installation dependent configurations][Installation dependent configurations]]
-   below.
+   Ansys directory structure, or if you want to use multiple versions of
+   Ansys, then please consult the section [[*Installation dependent configurations][Installation dependent configurations]].
 
 ** COMMENT Finding APDL-Mode
    If the APDL-Mode files (the files with the suffix /.el/) are *not*
@@ -190,6 +197,7 @@ or 2. by directly manipulating the Emacs configuration file
    folder.
 
    With the following setting
+
 
   #+BEGIN_SRC emacs-lisp :tangle yes
     (add-to-list 'auto-mode-alist '("\\.apdl$" . apdl-mode))
@@ -270,23 +278,42 @@ or 2. by directly manipulating the Emacs configuration file
 
 * Miscellaneous
 
-  #+BEGIN_SRC emacs-lisp :tangle yes
-    ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-			      ;; Miscellaneous
-    ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+   #+begin_src emacs-lisp :tangle yes
+      ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+				;; Miscellaneous
+      ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+     
+     ;; use Emacs' EWW browser for locally installed help
+     (setq browse-url-browser-function 'eww-browse-url)
+     ;; use the default system browser
+     ; (setq browse-url-browser-function 'browse-url-default-browser)
+     
+     ;; Some element collections, like "SHELLS" are implemented with `#'
+     ;; anchors which are not standard URLs.  This leads to an error on
+     ;; Windows with w32-shell-execute for locally installed help files.
+     ;; Browsers don't mind the anchors, so in this case use either EWW
+     ;; (see above) or specify an installed browser in your init file, see
+     ;; below example for MS Edge:
+     
+       (defun browse-url-edge (url &optional new-window)
+       (shell-command
+	(concat "start msedge " url)))
+     
+       ; (setq browse-url-browser-function 'browse-url-edge)
+   #+end_src
 
+
+  #+BEGIN_SRC emacs-lisp :tangle yes
     ;; The amount of time the help overlay is shown from
     ;; (`apdl-show-command-parameters').
 
-    ; (setq apdl-parameter-help-duration "2 min") ; the default
-    (setq apdl-parameter-help-duration 30) ; 30 seconds
+    ; (setq apdl-parameter-help-duration 30) ; 30 seconds, the default
+    (setq apdl-parameter-help-duration "2 min")
 
     ;; If you want to read the manual in GNU-Emacs' EWW browser.  This
     ;; might only work for locally installed help documents (a 1.7 GB
     ;; package v201) since v191 the online help is the default help
     ;; system.
-
-    (setq browse-url-browser-function 'eww-browse-url)
 
     ;; You might use this variable to create you own templates
     ;; in `apdl-wb-template.el'.
@@ -296,10 +323,10 @@ or 2. by directly manipulating the Emacs configuration file
     ;;  APDL-Mode mode configures the following variable from the
     ;;  evironment to show your license usage in
     ;;  `apdl-user-license-status'.  It is the user ID you are registered
-    ;;  for the  license server.
+    ;;  for the license server.  This is only necessary if APDL-Mode can't
+    ;;  find the environment variable USERNAME.
 
-    (setq apdl-username "userID") 		; new in 20.4.0
-
+    (setq apdl-username "myUserID") 		; new in 20.4.0
   #+END_SRC
 
 * COMMENT Autoloading (became obsolete with the packaging system)
@@ -369,6 +396,7 @@ or 2. by directly manipulating the Emacs configuration file
    Uncommenting the following might slow the editing of large .mac
    files (but only when apdl-highlighting-level is set to 2, see
    below).
+
 #+BEGIN_SRC emacs-lisp
 (setq apdl-dynamic-highlighting-flag nil)
 ; (setq apdl-dynamic-highlighting-flag t) ;default: t
@@ -409,6 +437,7 @@ or 2. by directly manipulating the Emacs configuration file
   Further things you possibly have to configure if your Ansys
   installation is completely differing from a default Ansys installation
   path, or if you want to mix various Ansys versions:
+
 #+BEGIN_SRC emacs-lisp  :tangle yes
     ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 			   ;; Ansys version and paths
@@ -421,7 +450,7 @@ or 2. by directly manipulating the Emacs configuration file
 
   (setq apdl-ansys-help-program
       "/appl/ansys_inc/20.0.1/v201/commonfiles/help/HelpViewer/AnsysHelpViewer.exe")
-      ;; normally it looks like this:
+      ;; the default under GNU-Linux looks like this:
       ;; "/ansys_inc/v201/commonfiles/help/HelpViewer/AnsysHelpViewer.exe"
   ;; On WINDOWS: slash before /d: is unnecessary, but possible?
   (setq apdl-ansys-help-path "d:/Program Files/Ansys Inc/16.2.0/v201/commonfiles/help/en-us/help/")
@@ -484,16 +513,19 @@ or 2. by directly manipulating the Emacs configuration file
 
 ** Solver options
    Number of cores for the run: 4 does not require HPC licenses
+
    #+BEGIN_SRC emacs-lisp
      (setq apdl-no-of-processors 8) ; default: 4
    #+END_SRC
 
    Which license type to use for the solver
+
    #+BEGIN_SRC emacs-lisp
-     (setq apdl-license "struct") ; default: "ansys"
+     (setq apdl-license "preppost") ; default: "ansys"
    #+END_SRC
 
    The Ansys job name
+
    #+BEGIN_SRC emacs-lisp
      (setq apdl-job "harmonics1") ; default: "file"
    #+END_SRC
@@ -531,7 +563,7 @@ or 2. by directly manipulating the Emacs configuration file
    (setq apdl-no-of-processors 8) ; default: 4
 
   ;;  which license type to use for the solver
-   (setq apdl-license "struct") ; default: "ansys"
+   (setq apdl-license "preppost") ; default: "ansys"
 
   ;; Ansys job name
    (setq apdl-job "harmonics1"); default: "file"
@@ -542,7 +574,7 @@ or 2. by directly manipulating the Emacs configuration file
 
 (provide 'apdl-config)
 
-;;; apdl-config.el ends here
+;;; apdl-config.el ends here, the rest are Emacs variables
 
 ;; Local Variables:
 ;; no-byte-compile: t
