--- a/index.org
+++ b/index.org
@@ -2,7 +2,7 @@
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
 #+OPTIONS: e:t email:t f:t inline:t num:t p:nil pri:nil prop:nil
 #+OPTIONS: stat:t tags:t tasks:t tex:t timestamp:t toc:nil todo:t |:t
-#+DATE: Time-stamp: <2020-02-29>
+#+DATE: Time-stamp: <2021-08-31>
 #+TITLE: The Comprehensive APDL-Mode Documentation
 #+AUTHOR: H. Dieter Wilhelm
 #+EMAIL: dieter@duenenhof-wilhelm.de
@@ -38,26 +38,28 @@
 #          ;;             type=\"text/css\"/>"
 # 	 )))
 
-
-
 * Introduction
-  You'll find in [[file:README.org][README.org]] the following topics:
-  - Features
-  - Installation
-  - Usage
-  - Configuration
-  - Customisation
-  - News
-  - License
-  - Acknowledgements
-  - Further Resources
-  - TODOs
+  HTML: [[file:README.org][README.org]]
+  # - Features
+  # - Installation
+  # - Usage
+  # - Configuration
+  # - Customisation
+  # - News
+  # - License
+  # - Acknowledgements
+  # - Further Resources
+  # - TODOs
 * Tutorials
-  - [[file:doc/A-M_introductory_tutorial.org][Introductory Tutorial]]
-  - [[file:doc/A-M_in-depth_tutorial.org][In-depth Tutorial]]
+** Introductory
+   APDL-Mode introductory tutorial
+  - PDF: [[file:doc/A-M_introductory_tutorial.pdf][A-M_introductory_tutorial.pdf]]
+  - HTML: [[file:doc/A-M_introductory_tutorial.org][Introductory Tutorial]]
+** In-depth
+  - HTML: [[file:doc/A-M_in-depth_tutorial.org][In-depth Tutorial]]
 * Reference Manuals
-  - The Apdl-Mode [[file:doc/A-M_APDL_reference.org][Highlighting and APDL reference]].
-  - The [[file:matlib/README.org][APDL-Mode material library]].
+  - HTML: The Apdl-Mode [[file:doc/A-M_APDL_reference.org][Highlighting and APDL reference]].
+  - HTML: [[file:matlib/README.org][APDL-Mode material library]].
 -----
 
 # The following is for Emacs
